--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>BookingAPITests.BookingAPITest.getBookingTest</td></tr>
+<tr><td>BookingAPITests.BookingAPITest.createBookingTest</td></tr>
+<tr><td>BookingAPITests.BookingAPITest.updateBookingTest</td></tr>
 </table>
