--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ganes\AppData\Local\Temp\testng-eclipse--352114210\testng-customsuite.xml</span>
+                    <span>C:\Users\ganes\AppData\Local\Temp\testng-eclipse--875819881\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="BookingAPITests.BookingAPITest" class="method navigator-link" hash-for-method="createBookingTest">createBookingTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="BookingAPITests.BookingAPITest" class="method navigator-link" hash-for-method="getBookingTest">getBookingTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="BookingAPITests.BookingAPITest" class="method navigator-link" hash-for-method="updateBookingTest">updateBookingTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="BookingAPITests.BookingAPITest" class="method navigator-link" hash-for-method="deleteBookingTest">deleteBookingTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,23 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createBookingTest">
-                  </a> <!-- createBookingTest -->
-                  <span class="method-name">createBookingTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getBookingTest">
-                  </a> <!-- getBookingTest -->
-                  <span class="method-name">getBookingTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="updateBookingTest">
-                  </a> <!-- updateBookingTest -->
-                  <span class="method-name">updateBookingTest</span>
+                  <a name="deleteBookingTest">
+                  </a> <!-- deleteBookingTest -->
+                  <span class="method-name">deleteBookingTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ganes\AppData\Local\Temp\testng-eclipse--352114210\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ganes\AppData\Local\Temp\testng-eclipse--875819881\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;BookingAPITests.BookingAPITest&quot;/&gt;
+      &lt;class name=&quot;BookingAPITests.BookingAPITest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;deleteBookingTest&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- BookingAPITests.BookingAPITest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'updateBookingTest')
+data.setCell(0, 1, 'deleteBookingTest')
 data.setCell(0, 2, 'BookingAPITests.BookingAPITest')
-data.setCell(0, 3, 440);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getBookingTest')
-data.setCell(1, 2, 'BookingAPITests.BookingAPITest')
-data.setCell(1, 3, 440);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createBookingTest')
-data.setCell(2, 2, 'BookingAPITests.BookingAPITest')
-data.setCell(2, 3, 221);
+data.setCell(0, 3, 432);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 432 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -242,9 +214,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">BookingAPITests.BookingAPITest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">getBookingTest</span>
+                <br/>
+                <span class="ignored-method-name">createBookingTest</span>
+                <br/>
+                <span class="ignored-method-name">updateBookingTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -259,24 +242,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createBookingTest</span>
-                <span class="method-start">3215 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">getToken</span>
-                <span class="method-start">3440 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">getBookingTest</span>
-                <span class="method-start">3643 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">getToken</span>
-                <span class="method-start">4086 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">updateBookingTest</span>
-                <span class="method-start">4252 ms</span>
+                <span class="method-name">deleteBookingTest</span>
+                <span class="method-start">2943 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
