--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c562f7">  <td>25/04/23 21:08:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingAPITest.getToken()[pri:0, instance:BookingAPITests.BookingAPITest@4a94ee4]">&gt;&gt;getToken</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>25/04/23 21:08:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingAPITest.getToken()[pri:0, instance:BookingAPITests.BookingAPITest@4a94ee4]">&gt;&gt;getToken</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>25/04/23 21:08:38</td>   <td>-871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingAPITest.createBookingTest()[pri:0, instance:BookingAPITests.BookingAPITest@4a94ee4]">createBookingTest</td> 
+<tr bgcolor="c562f7">  <td>25/04/23 21:21:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingAPITest.deleteBookingTest()[pri:0, instance:BookingAPITests.BookingAPITest@12468a38]">deleteBookingTest</td> 
   <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>25/04/23 21:08:39</td>   <td>166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingAPITest.updateBookingTest()[pri:0, instance:BookingAPITests.BookingAPITest@4a94ee4]">updateBookingTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>25/04/23 21:08:39</td>   <td>-443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingAPITest.getBookingTest()[pri:0, instance:BookingAPITests.BookingAPITest@4a94ee4]">getBookingTest</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c562f7">  <td>25/04/23 21:08:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingAPITest.getToken()[pri:0, instance:BookingAPITests.BookingAPITest@4a94ee4]">&gt;&gt;getToken</td> 
+<tr bgcolor="c562f7">  <td>25/04/23 21:21:52</td>   <td>-2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BookingAPITest.getToken()[pri:0, instance:BookingAPITests.BookingAPITest@12468a38]">&gt;&gt;getToken</td> 
 <td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
 </table>
